--- a/src/content/posts/core-d20/about-drugs.mdx
+++ b/src/content/posts/core-d20/about-drugs.mdx
@@ -46,13 +46,13 @@ tags:
 
 Кроме того, в первый день ломки вы должны сделать спасбросок Мудрости с КС 8 или предпринять действия, чтобы найти дозу препарата. Этот спасбросок нужно повторять каждый день, с увеличением КС на 1 каждый день.
 
-Выздоровление: Только пройдя через полную ломку и набрав необходимое количество рассматриваемых спасбросков, наркоман может сбросить тиски зависимости. Тем не менее, КС Зависимости от этого наркотика навсегда увеличивается для этого персонажа на +2 – однажды соблазнившись данным пороком, ему труднее освободиться, если персонаж снова станет наркоманом.
+**Выздоровление:** Только пройдя через полную ломку и набрав необходимое количество рассматриваемых спасбросков, наркоман может сбросить тиски зависимости. Тем не менее, КС Зависимости от этого наркотика навсегда увеличивается для этого персонажа на +2 – однажды соблазнившись данным пороком, ему труднее освободиться, если персонаж снова станет наркоманом.
 
-Под действием наркотиков (состояние)
-
-Существо, находящееся под действием наркотиков, находится под воздействием препарата в их организме. У каждого препарата своя механика.
-
-Существо под действием наркотика может сделать спасбросок против эффектов
+>Под действием наркотиков (состояние)
+>
+>Существо, находящееся под действием наркотиков, находится под воздействием препарата в их организме. У каждого препарата своя механика.
+>
+>Существо под действием наркотика может сделать спасбросок против эффектов
 
 ## Примеры наркотиков
 В качестве примера приведем один наркотик.
@@ -62,4 +62,60 @@ tags:
 
 Эта трава была хорошо известна во времена Нетерила, но ее секрет был утерян, когда эта империя пала. Некоторые торговцы заново открыли это снадобье и спасли небольшое количество его из оазисов в Анаурохе, начав продавать его в небольших количествах.
 
-Кожистые на вкус листья панаколо настраивают пользователя на Плетение и усиливают силу тайных заклинаний. Однако они делают пользователя раздражи
+Кожистые на вкус листья панаколо настраивают пользователя на Плетение и усиливают силу тайных заклинаний. Однако они делают пользователя раздражительным и угрюмым.
+
+**Во время действия:** увеличьте КС тайных заклинаний на 1.
+
+**Во время действия:** персонаж совершает с помехой все проверки Харизмы.
+
+**Передозировка:** если вторая доза панаэоло принята в течении часа после первой, то КС заклинаний увеличивается еще на 1 (суммарно на 2), но при этом происходит следующий эффект.
+
+**Немедленно (при передозировке):** персонаж получает 2к6 психического урона, которые не могут быть излечены до завершения действия наркотика.
+
+**Привыкание:** легкое (Телосложение, Мудрость)
+
+---
+### Tekkil
+
+Natural  3 gp per dose
+
+This fat, red leaf releases a milky juice when chewed. The juice is an analgesic, and is sometimes used by people suffering from extreme or chronic pain. Addicts who seek to numb their senses and submerge themselves in a drug-induced stuper use it in greater doses.
+
+Type: Ingested  
+
+Save: Constitution DC 10  I
+
+Interval: One hour
+
+Effect: The user's pain sensitivity is numbed greatly, at the expense of his energy.
+
+While in Effect: The user gains damage resistance 1 against all attacks that inflict bludgeoning, slashing, piercing, and force damage.
+
+While in Effect: The user suffers disadvantage on Dexterity ability checks and saves.
+
+Overdose: If a second dose is taken while the first is still in effect, it causes a numbing stupor for 2d4 hours. The user suffers the Poisoned condition, with the additional effects of halving the user's speed, and allowing it to use either an action or a bonus action during its turn but not both.
+
+Addiction: Medium (Wisdom)
+
+### Ziran
+
+Alchemical  50 gp per dose
+
+Known as the "Bloodfast," this is a bitter white powder usually compressed into a tablet. Ziran is manufactured from several Underdark fungi by the drow. Its secret has reached the surface, and some alchemists have begun to cultivate farms of the appropriate mushrooms.
+
+Type: Ingested  
+
+Save: Constitution DC 15  
+
+Interval: One hour
+
+Effect: The user's reflexes and precision are sharpened, but afterwards, the user suffers a sense of detatchment or out-of-body experience, as though they were watching themselves from a distance.
+
+Immediate: User suffers the Stunned condition for 1 round.
+While in Effect: User gains advantage on Dexterity ability checks and saves.
+
+When Effect Ends: User suffers the Poisoned condition for 1d3 hours afterward.
+
+Overdose: For each additional dose after the first taken within 24 hours of the first, double the duration of the Poisoned condition, and reduce the Save DC by 2.
+
+Addiction: High (Constitution, Wisdom)
