--- a/src/content/posts/core-d20/about-drugs.mdx
+++ b/src/content/posts/core-d20/about-drugs.mdx
@@ -10,19 +10,20 @@ tags:
 ---
 
 ## Наркотики
-У каждого наркотика есть Тип, указывающий, как употребляется наркотик; Спасбросок, который используется, чтобы в конечном итоге преодолеть эффекты наркотика; и Интервал, который показывает, сколько времени проходит между спасбросками, чтобы попытаться преодолеть влияние наркотика.
 
-Наркотики также имеют рейтинги зависимости, которые измеряются «Нет», «Низкий», «Средний» и «Высокий» (см. врезку «Зависимость»). После употребления наркотика пользователь немедленно подвергается воздействию в течение определенного периода времени (называемого интервалом). По истечении этого времени (период, называемый первым интервалом) пользователь совершает спасбросок (обычно Телосложения). В случае успеха этого спасброска пользователь начинает восстанавливаться. У каждого наркотика есть один или несколько Эффектов, с подробным описанием не только того, что происходит, но и того, в какой части опыта это происходит, как показано ниже:
+У каждого наркотика есть **Тип**, указывающий, как употребляется наркотик; **Спасбросок**, который используется, чтобы в конечном итоге преодолеть эффекты наркотика; и **Интервал**, который показывает, сколько времени проходит между спасбросками, чтобы попытаться преодолеть влияние наркотика.
 
-Немедленно: этот Эффект возникает сразу после употребления
+Наркотики также имеют рейтинги зависимости, которые измеряются «Нет», «Низкий», «Средний» и «Высокий» (см. врезку «Зависимость»). После употребления наркотика пользователь немедленно подвергается воздействию в течение определенного периода времени (называемого **интервалом**). По истечении этого времени (период, называемый первым интервалом) пользователь совершает спасбросок (обычно Телосложения). В случае успеха этого спасброска пользователь начинает восстанавливаться. У каждого наркотика есть один или несколько Эффектов, с подробным описанием не только того, что происходит, но и того, в какой части опыта это происходит, как показано ниже:
 
-До первого интервала: этот эффект возникает после употребления и длится до самого первого интервала.
+**Немедленно:** этот Эффект возникает сразу после употребления
 
-На первом интервале: этот эффект возникает на первом интервале.
+**До первого интервала:** этот эффект возникает после употребления и длится до самого первого интервала.
 
-Во время действия: этот эффект длится с момента употребления наркотика и до совершения успешного спасброска.
+**На первом интервале:** этот эффект возникает на первом интервале.
 
-После окончания действия: этот эффект возникает, когда пользователь делает успешный спасбросок от наркотика.
+**Во время действия:** этот эффект длится с момента употребления наркотика и до совершения успешного спасброска.
+
+**После окончания действия:** этот эффект возникает, когда пользователь делает успешный спасбросок от наркотика.
 
 ## Зависимость
 
@@ -30,17 +31,17 @@ tags:
 
 В случае успеха персонаж не становится зависимым. Если он провалит спасбросок, он станет зависимым от этого наркотика.
 
-Зависимость: Если вы держитесь дольше Времени Насыщения, не приняв дозу наркотика, от которого вы зависимы, вы должны совершить спасбросок типа, указанного для наркотика, с КС, основанном на интенсивности Зависимости. Если этот спасбросок успешен, вы подавляете тягу, но должны сделать спасбросок снова на следующий день, с кумулятивным +1 к КС за день после Времени Насыщения. При провале спасброска, у вас начнется ломка
+**Зависимость:** Если вы держитесь дольше Времени Насыщения, не приняв дозу наркотика, от которого вы зависимы, вы должны совершить спасбросок типа, указанного для наркотика, с КС, основанном на интенсивности Зависимости. Если этот спасбросок успешен, вы подавляете тягу, но должны сделать спасбросок снова на следующий день, с кумулятивным +1 к КС за день после Времени Насыщения. При провале спасброска, у вас начнется ломка
 
 После того, как вы войдете в режим вывода, вы можете делать ежедневные спасброски с КС, который определяется интенсивностью. За каждый день абстиненции это значение уменьшается на 1. Как только вы накопите количество успешных спасбросков определяемое интенсивностью, вы больше не будете зависимы от наркотика, и все эффекты абстиненции закончатся. Однако до тех пор, пока вы не сделаете эти сохранения, вы будете страдать от всех кумулятивных эффектов ломки.
 
-Ломка (Низкий): КС 12 (-1 в день) • 2 спасброска. Вы получаете штраф -1 ко всем проверкам и спасброскам Мудрости, пока не сделаете 2 успешных спасброска или не употребите одну дозу наркотика, от которого вы зависимы. Этот штраф увеличивается на 1 за каждые три полных дня вывода, до максимума -4.
+**Ломка (Низкий):** КС 12 (-1 в день) • 2 спасброска. Вы получаете штраф -1 ко всем проверкам и спасброскам Мудрости, пока не сделаете 2 успешных спасброска или не употребите одну дозу наркотика, от которого вы зависимы. Этот штраф увеличивается на 1 за каждые три полных дня вывода, до максимума -4.
 
-Ломка (Средний): КС 16 (-1 в день) • 5 спасбросков. Вы получаете штраф -2 ко всем проверкам и спасброскам Мудрости и -1 ко всем проверкам и спасброскам Ловкости, пока не сделаете 5 успешных спасбросков или не примете одну дозу наркотика, от которого вы зависимы. На третий день удвойте эти штрафы. На шестой день это становится помехой для всех проверок и спасбросков Мудрости и -4 к проверкам и спасброскам Ловкости. На 10-й день это становится помехой как для Мудрости, так и для Ловкости.
+**Ломка (Средний):** КС 16 (-1 в день) • 5 спасбросков. Вы получаете штраф -2 ко всем проверкам и спасброскам Мудрости и -1 ко всем проверкам и спасброскам Ловкости, пока не сделаете 5 успешных спасбросков или не примете одну дозу наркотика, от которого вы зависимы. На третий день удвойте эти штрафы. На шестой день это становится помехой для всех проверок и спасбросков Мудрости и -4 к проверкам и спасброскам Ловкости. На 10-й день это становится помехой как для Мудрости, так и для Ловкости.
 
 Кроме того, на третий день ломки вы должны сделать спасбросок Мудрости со КС 5 или предпринять действия, чтобы найти дозу лекарства. Это сохранение нужно повторять каждый день, с увеличением КС на 1 каждый день.
 
-Ломка (высокий): КС 18 (-1 за 2 дня) • 10 спасбросков. Вы получаете помеху на все проверки и спасброски Мудрости, пока не наберете 10 успешных спасбросков или не употребите одну дозу наркотика, от которого вы зависимы. На третий день вы также получаете помеху к проверкам и спасброскам Ловкости. На шестой день вы получаете состояние Отравление в дополнение к помехам к проверкам и спасброскам Ловкости и Мудрости.
+**Ломка (высокий):** КС 18 (-1 за 2 дня) • 10 спасбросков. Вы получаете помеху на все проверки и спасброски Мудрости, пока не наберете 10 успешных спасбросков или не употребите одну дозу наркотика, от которого вы зависимы. На третий день вы также получаете помеху к проверкам и спасброскам Ловкости. На шестой день вы получаете состояние Отравление в дополнение к помехам к проверкам и спасброскам Ловкости и Мудрости.
 
 На восьмой день у вас остаются все предыдущие штрафы, плюс вы теряете способность восстанавливать Кости Хитов после длительного отдыха. На двенадцатый день вы теряете 1 кость хитов день в дополнение ко всем предыдущим штрафам. Если у вас закончились кости хитов, вы должны немедленно сделать спасбросок от смерти вместо потери кости хитов; это продолжается до тех пор, пока вы не наберете три полных неудачи, независимо от того, сколько успехов вы наберете.
 
